chore: services, middlewares e schemas convertidos para TS
